--- a/_pages/aoc_2020.md
+++ b/_pages/aoc_2020.md
@@ -1,6 +1,6 @@
 ---
-permalink: "/projects/aoc/aoc_2020"
-layout: page
+permalink: "/projects/aoc/2020"
+layout: default
 title:  "Advent of Code 2020"
 ---
 
