--- a/_pages/aoc/2020.md
+++ b/_pages/aoc/2020.md
@@ -5,4 +5,5 @@ title:  "Advent of Code 2020"
 
 # My Advent of Code 2020 Solutions
 
-{{ page.url }}
+## Perl
+[Solutions in Perl](https://github.com/christianeiselt/Advent-of-Code-2020): {{ site.public_repositories }}
