--- a/_pages/aoc/2020.md
+++ b/_pages/aoc/2020.md
@@ -6,4 +6,4 @@ title:  "Advent of Code 2020"
 # My Advent of Code 2020 Solutions
 
 ## Perl
-[Solutions in Perl](https://github.com/christianeiselt/Advent-of-Code-2020): {{ site.github.public_repositories }}
+[Link to Repository with Solutions in Perl](https://github.com/christianeiselt/Advent-of-Code-2020)
